--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,3 +42,7 @@ body {
 .subtask {
   @apply flex justify-start items-center gap-4 p-4 bg-darkBlue rounded;
 }
+
+.board {
+  @apply pl-4 flex justify-start items-center gap-3 py-2 cursor-pointer hover:bg-fontTertiary hover:text-fontPrimary hover:rounded-r-full;
+}
