--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,11 +24,11 @@ body {
 }
 
 .input {
-  @apply border-fontSecondary border-2 bg-transparent rounded py-2 px-3 opacity-25 outline-0;
+  @apply border-fontSecondary border-2 bg-transparent opacity-60 rounded py-2 px-3 outline-0;
 }
 
 .textarea {
-  @apply border-fontSecondary border-2 bg-transparent rounded py-2 px-3 opacity-25 outline-0 min-h-[150px];
+  @apply border-fontSecondary border-2 bg-transparent rounded py-2 px-3 opacity-60 outline-0 min-h-[150px];
 }
 
 .purpleBtn {
