--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@ body {
 
 /* Grouped utilities */
 .task {
-  @apply bg-darkGray w-full px-4 py-6 rounded-md cursor-pointer hover:bg-opacity-50;
+  @apply bg-backgroundColorMenu dark:bg-darkGray w-full px-4 py-4 rounded-md cursor-pointer hover:bg-opacity-50;
 }
 
 .task-title {
@@ -57,7 +57,7 @@ body {
 }
 
 .subtask {
-  @apply flex justify-start items-center gap-4 p-4 bg-darkBlue rounded;
+  @apply flex justify-start items-center gap-4 p-4 bg-backgroundColorMain dark:bg-darkBlue rounded;
 }
 
 .board {
