--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,7 +12,7 @@ body {
 
 /* Grouped utilities */
 .task {
-  @apply bg-backgroundColorMenu dark:bg-darkGray w-full px-4 py-4 rounded-md cursor-pointer hover:bg-opacity-50;
+  @apply bg-backgroundColorMenu dark:bg-darkGray hover:bg-opacity-50 dark:hover:bg-opacity-50 text-fontPrimary dark:text-fontPrimaryDark w-full px-4 py-4 rounded-md cursor-pointer;
 }
 
 .task-title {
