--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,6 +47,27 @@ body {
 .mantine-Checkbox-input {
   @apply border-2 border-fontTertiary dark:border-none cursor-pointer checked:bg-fontTertiary checked:border-none;
 }
+/* .mantine-Popover-popover { */
+.mantine-1iu7nck {
+  @apply bg-fontTertiary  flex justify-start items-start;
+}
+
+/* .mantine-Popover-body { */
+.mantine-ptywf3 {
+  @apply flex flex-col justify-start items-start;
+}
+
+.mantine-Popover-inner {
+  @apply flex justify-start items-start;
+}
+
+#mantine-gypzkqcv9-body {
+  @apply flex justify-start items-start;
+}
+
+.mantine-Popover-dropdown {
+  @apply bg-red-400;
+}
 
 .purpleBtn {
   @apply py-2 bg-fontTertiary text-backgroundColorMenu dark:text-fontPrimaryDark font-bold rounded-full dark:hover:bg-fontPrimaryDark dark:hover:bg-opacity-100 dark:hover:text-fontTertiary hover:bg-opacity-50;
@@ -61,5 +82,5 @@ body {
 }
 
 .board {
-  @apply pl-4 flex justify-start items-center gap-3 py-2 cursor-pointer font-medium hover:bg-fontTertiary hover:text-fontPrimaryDark hover:rounded-r-full;
+  @apply px-4 flex justify-start items-center gap-3 py-2 cursor-pointer font-medium hover:bg-fontTertiary hover:text-fontPrimaryDark hover:rounded-r-full;
 }
